// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The \`CookieAlert\` component if \`isOpen\` is false should return the right structure 1`] = `
<CookieAlert
  buttonText="There is some text"
  isOpen={false}
  isUserOnMobile={false}
  linkText="A link"
  linkUrl="/"
  onAccept={[MockFunction]}
  text="some text"
/>
`;

exports[`The \`CookieAlert\` component if \`isOpen\` is true should return the right structure 1`] = `
<CookieAlert
  buttonText="There is some text"
  isOpen={true}
  isUserOnMobile={true}
  linkText="A link"
  linkUrl="/"
  onAccept={[MockFunction]}
  text="some text"
>
  <Modal
    hasCloseIcon={false}
    hasPadding={false}
    hasRoundedCorners={true}
    header={null}
    isFullscreen={false}
    isOpen={true}
    onClose={[Function]}
    size="tiny"
    trigger={null}
  >
    <Modal
      centered={true}
      className="has-rounded-corners"
      closeIcon={false}
      closeOnDimmerClick={true}
      closeOnDocumentClick={false}
      dimmer="inverted"
      eventPool="Modal"
      onClose={[Function]}
      open={true}
      size="tiny"
      trigger={null}
    >
      <Portal
        closeOnDocumentClick={false}
        closeOnEscape={true}
        eventPool="Modal"
        mountNode={
          <body
            class="dimmable dimmed"
          >
            <div
              class="ui inverted page modals dimmer transition visible active"
              style="display: flex;"
            >
              <div
                class="ui tiny modal transition visible active has-rounded-corners"
              >
                <div
                  class="content"
                >
                  <div
                    class="ui container"
                  >
                    <div
                      class="flex-container"
                      style="display: flex; flex-grow: 1; height: 100%; align-items: center; flex-direction: column; justify-content: center;"
                    >
                      <div
                        class="ui hidden divider"
                      />
                      <p
                        class=""
                      >
                        some text
                      </p>
                      <a
                        class="ui basic left floated button"
                        href="/"
                        role="button"
                        target="_blank"
                        type="button"
                      >
                        A link
                      </a>
                      <div
                        class="ui hidden divider"
                      />
                      <button
                        class="ui circular left floated button"
                        type="button"
                      >
                        There is some text
                      </button>
                       
                      <div
                        class="ui hidden divider"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </body>
        }
        onClose={[Function]}
        onMount={[Function]}
        onOpen={[Function]}
        onUnmount={[Function]}
        open={true}
        openOnTriggerClick={true}
        trigger={null}
      >
        <PortalInner
          innerRef={
            Object {
              "current": <div
                class="ui inverted page modals dimmer transition visible active"
                style="display: flex;"
              >
                <div
                  class="ui tiny modal transition visible active has-rounded-corners"
                >
                  <div
                    class="content"
                  >
                    <div
                      class="ui container"
                    >
                      <div
                        class="flex-container"
                        style="display: flex; flex-grow: 1; height: 100%; align-items: center; flex-direction: column; justify-content: center;"
                      >
                        <div
                          class="ui hidden divider"
                        />
                        <p
                          class=""
                        >
                          some text
                        </p>
                        <a
                          class="ui basic left floated button"
                          href="/"
                          role="button"
                          target="_blank"
                          type="button"
                        >
                          A link
                        </a>
                        <div
                          class="ui hidden divider"
                        />
                        <button
                          class="ui circular left floated button"
                          type="button"
                        >
                          There is some text
                        </button>
                         
                        <div
                          class="ui hidden divider"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>,
            }
          }
          mountNode={
            <body
              class="dimmable dimmed"
            >
              <div
                class="ui inverted page modals dimmer transition visible active"
                style="display: flex;"
              >
                <div
                  class="ui tiny modal transition visible active has-rounded-corners"
                >
                  <div
                    class="content"
                  >
                    <div
                      class="ui container"
                    >
                      <div
                        class="flex-container"
                        style="display: flex; flex-grow: 1; height: 100%; align-items: center; flex-direction: column; justify-content: center;"
                      >
                        <div
                          class="ui hidden divider"
                        />
                        <p
                          class=""
                        >
                          some text
                        </p>
                        <a
                          class="ui basic left floated button"
                          href="/"
                          role="button"
                          target="_blank"
                          type="button"
                        >
                          A link
                        </a>
                        <div
                          class="ui hidden divider"
                        />
                        <button
                          class="ui circular left floated button"
                          type="button"
                        >
                          There is some text
                        </button>
                         
                        <div
                          class="ui hidden divider"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </body>
          }
          onMount={[Function]}
          onUnmount={[Function]}
        >
          <Portal
            containerInfo={
              <body
                class="dimmable dimmed"
              >
                <div
                  class="ui inverted page modals dimmer transition visible active"
                  style="display: flex;"
                >
                  <div
                    class="ui tiny modal transition visible active has-rounded-corners"
                  >
                    <div
                      class="content"
                    >
                      <div
                        class="ui container"
                      >
                        <div
                          class="flex-container"
                          style="display: flex; flex-grow: 1; height: 100%; align-items: center; flex-direction: column; justify-content: center;"
                        >
                          <div
                            class="ui hidden divider"
                          />
                          <p
                            class=""
                          >
                            some text
                          </p>
                          <a
                            class="ui basic left floated button"
                            href="/"
                            role="button"
                            target="_blank"
                            type="button"
                          >
                            A link
                          </a>
                          <div
                            class="ui hidden divider"
                          />
                          <button
                            class="ui circular left floated button"
                            type="button"
                          >
                            There is some text
                          </button>
                           
                          <div
                            class="ui hidden divider"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <Ref
              innerRef={[Function]}
            >
              <RefFindNode
                innerRef={[Function]}
              >
                <div
                  className="ui inverted page modals dimmer transition visible active"
                >
                  <Ref
                    innerRef={
                      Object {
                        "current": <div
                          class="ui tiny modal transition visible active has-rounded-corners"
                        >
                          <div
                            class="content"
                          >
                            <div
                              class="ui container"
                            >
                              <div
                                class="flex-container"
                                style="display: flex; flex-grow: 1; height: 100%; align-items: center; flex-direction: column; justify-content: center;"
                              >
                                <div
                                  class="ui hidden divider"
                                />
                                <p
                                  class=""
                                >
                                  some text
                                </p>
                                <a
                                  class="ui basic left floated button"
                                  href="/"
                                  role="button"
                                  target="_blank"
                                  type="button"
                                >
                                  A link
                                </a>
                                <div
                                  class="ui hidden divider"
                                />
                                <button
                                  class="ui circular left floated button"
                                  type="button"
                                >
                                  There is some text
                                </button>
                                 
                                <div
                                  class="ui hidden divider"
                                />
                              </div>
                            </div>
                          </div>
                        </div>,
                      }
                    }
                  >
                    <RefFindNode
                      innerRef={
                        Object {
                          "current": <div
                            class="ui tiny modal transition visible active has-rounded-corners"
                          >
                            <div
                              class="content"
                            >
                              <div
                                class="ui container"
                              >
                                <div
                                  class="flex-container"
                                  style="display: flex; flex-grow: 1; height: 100%; align-items: center; flex-direction: column; justify-content: center;"
                                >
                                  <div
                                    class="ui hidden divider"
                                  />
                                  <p
                                    class=""
                                  >
                                    some text
                                  </p>
                                  <a
                                    class="ui basic left floated button"
                                    href="/"
                                    role="button"
                                    target="_blank"
                                    type="button"
                                  >
                                    A link
                                  </a>
                                  <div
                                    class="ui hidden divider"
                                  />
                                  <button
                                    class="ui circular left floated button"
                                    type="button"
                                  >
                                    There is some text
                                  </button>
                                   
                                  <div
                                    class="ui hidden divider"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>,
                        }
                      }
                    >
                      <div
                        className="ui tiny modal transition visible active has-rounded-corners"
                        style={Object {}}
                      >
                        <MountNode
                          className="dimmable dimmed"
                        />
                        <ModalContent>
                          <div
                            className="content"
                          >
                            <HorizontalGutters>
                              <Container>
                                <div
                                  className="ui container"
                                >
                                  <FlexContainer
                                    alignContent={null}
                                    alignItems="center"
                                    flexDirection="column"
                                    flexWrap={null}
                                    justifyContent="center"
                                  >
                                    <div
                                      className="flex-container"
                                      style={
                                        Object {
                                          "alignContent": null,
                                          "alignItems": "center",
                                          "display": "flex",
                                          "flexDirection": "column",
                                          "flexGrow": "1",
                                          "flexWrap": null,
                                          "height": "100%",
                                          "justifyContent": "center",
                                        }
                                      }
                                    >
                                      <Divider
                                        className=""
                                        hasLine={false}
                                        size="medium"
                                      >
                                        <Divider
                                          className=""
                                          hidden={true}
                                          section={false}
                                        >
                                          <div
                                            className="ui hidden divider"
                                          />
                                        </Divider>
                                      </Divider>
                                      <Paragraph
                                        isCompact={false}
                                        size="medium"
                                        weight={null}
                                      >
                                        <p
                                          className=""
                                        >
                                          some text
                                        </p>
                                      </Paragraph>
                                      <Link
                                        href="/"
                                        isFluid={false}
                                        isPositionedRight={false}
                                        onClick={[Function]}
                                        willOpenInNewTab={true}
                                      >
                                        <Button
                                          as="a"
                                          basic={true}
                                          floated="left"
                                          fluid={false}
                                          href="/"
                                          onClick={[Function]}
                                          target="_blank"
                                          type="button"
                                        >
                                          <Ref
                                            innerRef={
                                              Object {
                                                "current": <a
                                                  class="ui basic left floated button"
                                                  href="/"
                                                  role="button"
                                                  target="_blank"
                                                  type="button"
                                                >
                                                  A link
                                                </a>,
                                              }
                                            }
                                          >
                                            <RefFindNode
                                              innerRef={
                                                Object {
                                                  "current": <a
                                                    class="ui basic left floated button"
                                                    href="/"
                                                    role="button"
                                                    target="_blank"
                                                    type="button"
                                                  >
                                                    A link
                                                  </a>,
                                                }
                                              }
                                            >
                                              <a
                                                className="ui basic left floated button"
                                                href="/"
                                                onClick={[Function]}
                                                role="button"
                                                target="_blank"
                                                type="button"
                                              >
                                                A link
                                              </a>
                                            </RefFindNode>
                                          </Ref>
                                        </Button>
                                      </Link>
                                      <Divider
                                        className=""
                                        hasLine={false}
                                        size="medium"
                                      >
                                        <Divider
                                          className=""
                                          hidden={true}
                                          section={false}
                                        >
                                          <div
                                            className="ui hidden divider"
                                          />
                                        </Divider>
                                      </Divider>
                                      <Button
                                        hasShadow={false}
                                        icon={null}
                                        isCompact={false}
                                        isDisabled={false}
                                        isFluid={false}
                                        isFormSubmit={false}
                                        isLoading={false}
                                        isOutlined={false}
                                        isPositionedRight={false}
                                        isRounded={true}
                                        isSecondary={false}
                                        onClick={[MockFunction]}
                                        size={null}
                                      >
                                        <Button
                                          as="button"
                                          basic={false}
                                          circular={true}
                                          className=""
                                          compact={false}
                                          disabled={false}
                                          floated="left"
                                          fluid={false}
                                          loading={false}
                                          onClick={[MockFunction]}
                                          secondary={false}
                                          size={null}
                                          type="button"
                                        >
                                          <Ref
                                            innerRef={
                                              Object {
                                                "current": <button
                                                  class="ui circular left floated button"
                                                  type="button"
                                                >
                                                  There is some text
                                                </button>,
                                              }
                                            }
                                          >
                                            <RefFindNode
                                              innerRef={
                                                Object {
                                                  "current": <button
                                                    class="ui circular left floated button"
                                                    type="button"
                                                  >
                                                    There is some text
                                                  </button>,
                                                }
                                              }
                                            >
                                              <button
                                                className="ui circular left floated button"
                                                onClick={[Function]}
                                                type="button"
                                              >
                                                There is some text
                                              </button>
                                            </RefFindNode>
                                          </Ref>
                                        </Button>
                                      </Button>
                                       
                                      <Divider
                                        className=""
                                        hasLine={false}
                                        size="medium"
                                      >
                                        <Divider
                                          className=""
                                          hidden={true}
                                          section={false}
                                        >
                                          <div
                                            className="ui hidden divider"
                                          />
                                        </Divider>
                                      </Divider>
                                    </div>
                                  </FlexContainer>
                                </div>
                              </Container>
                            </HorizontalGutters>
                          </div>
                        </ModalContent>
                      </div>
                    </RefFindNode>
                  </Ref>
                </div>
              </RefFindNode>
            </Ref>
          </Portal>
        </PortalInner>
        <EventStack
          name="mouseleave"
          on={[Function]}
          pool="Modal"
          target={
            Object {
              "current": <div
                class="ui inverted page modals dimmer transition visible active"
                style="display: flex;"
              >
                <div
                  class="ui tiny modal transition visible active has-rounded-corners"
                >
                  <div
                    class="content"
                  >
                    <div
                      class="ui container"
                    >
                      <div
                        class="flex-container"
                        style="display: flex; flex-grow: 1; height: 100%; align-items: center; flex-direction: column; justify-content: center;"
                      >
                        <div
                          class="ui hidden divider"
                        />
                        <p
                          class=""
                        >
                          some text
                        </p>
                        <a
                          class="ui basic left floated button"
                          href="/"
                          role="button"
                          target="_blank"
                          type="button"
                        >
                          A link
                        </a>
                        <div
                          class="ui hidden divider"
                        />
                        <button
                          class="ui circular left floated button"
                          type="button"
                        >
                          There is some text
                        </button>
                         
                        <div
                          class="ui hidden divider"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>,
            }
          }
        />
        <EventStack
          name="mouseenter"
          on={[Function]}
          pool="Modal"
          target={
            Object {
              "current": <div
                class="ui inverted page modals dimmer transition visible active"
                style="display: flex;"
              >
                <div
                  class="ui tiny modal transition visible active has-rounded-corners"
                >
                  <div
                    class="content"
                  >
                    <div
                      class="ui container"
                    >
                      <div
                        class="flex-container"
                        style="display: flex; flex-grow: 1; height: 100%; align-items: center; flex-direction: column; justify-content: center;"
                      >
                        <div
                          class="ui hidden divider"
                        />
                        <p
                          class=""
                        >
                          some text
                        </p>
                        <a
                          class="ui basic left floated button"
                          href="/"
                          role="button"
                          target="_blank"
                          type="button"
                        >
                          A link
                        </a>
                        <div
                          class="ui hidden divider"
                        />
                        <button
                          class="ui circular left floated button"
                          type="button"
                        >
                          There is some text
                        </button>
                         
                        <div
                          class="ui hidden divider"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>,
            }
          }
        />
        <EventStack
          name="mousedown"
          on={[Function]}
          pool="Modal"
          target="document"
        />
        <EventStack
          name="click"
          on={[Function]}
          pool="Modal"
          target="document"
        />
        <EventStack
          name="keydown"
          on={[Function]}
          pool="Modal"
          target="document"
        />
      </Portal>
    </Modal>
  </Modal>
</CookieAlert>
`;

exports[`The \`CookieAlert\` component if \`isUserOnMobile\` is false should return the right structure 1`] = `
<CookieAlert
  buttonText="There is some text"
  isOpen={true}
  isUserOnMobile={false}
  linkText="A link"
  linkUrl="/"
  onAccept={[MockFunction]}
  text="some text"
>
  <div
    className="cookies-form"
  >
    <Form
      actionLink={null}
      autoComplete={null}
      errorMessage=""
      headingText={null}
      onSubmit={[MockFunction]}
      submitButtonText="There is some text"
      successMessage=""
      validation={Object {}}
    >
      <Card
        className="has-form"
        fluid={true}
      >
        <div
          className="ui fluid card has-form"
          onClick={[Function]}
        >
          <CardContent>
            <div
              className="content"
            >
              <Form
                as="form"
                autoComplete={null}
                error={false}
                onSubmit={[Function]}
                success={false}
              >
                <form
                  autoComplete={null}
                  className="ui form"
                  onSubmit={[Function]}
                >
                  <FormField
                    key=".0"
                  >
                    <div
                      className="field"
                    >
                      <Paragraph
                        isCompact={false}
                        onBlur={[Function]}
                        onChange={[Function]}
                        size="medium"
                        weight={null}
                      >
                        <p
                          className=""
                        >
                          some text
                        </p>
                      </Paragraph>
                    </div>
                  </FormField>
                  <FormField
                    key=".1"
                  >
                    <div
                      className="field"
                    >
                      <Link
                        href="/"
                        isFluid={false}
                        isPositionedRight={false}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        willOpenInNewTab={true}
                      >
                        <Button
                          as="a"
                          basic={true}
                          floated="left"
                          fluid={false}
                          href="/"
                          onClick={[Function]}
                          target="_blank"
                          type="button"
                        >
                          <Ref
                            innerRef={
                              Object {
                                "current": <a
                                  class="ui basic left floated button"
                                  href="/"
                                  role="button"
                                  target="_blank"
                                  type="button"
                                >
                                  A link
                                </a>,
                              }
                            }
                          >
                            <RefFindNode
                              innerRef={
                                Object {
                                  "current": <a
                                    class="ui basic left floated button"
                                    href="/"
                                    role="button"
                                    target="_blank"
                                    type="button"
                                  >
                                    A link
                                  </a>,
                                }
                              }
                            >
                              <a
                                className="ui basic left floated button"
                                href="/"
                                onClick={[Function]}
                                role="button"
                                target="_blank"
                                type="button"
                              >
                                A link
                              </a>
                            </RefFindNode>
                          </Ref>
                        </Button>
                      </Link>
                    </div>
                  </FormField>
                  <Button
                    hasShadow={false}
                    icon={null}
                    isCompact={false}
                    isDisabled={false}
                    isFluid={false}
                    isFormSubmit={true}
                    isLoading={false}
                    isOutlined={false}
                    isPositionedRight={true}
                    isRounded={true}
                    isSecondary={false}
                    onClick={[Function]}
                    size={null}
                  >
                    <Button
                      as="button"
                      basic={false}
                      circular={true}
                      className=""
                      compact={false}
                      disabled={false}
                      floated="right"
                      fluid={false}
                      loading={false}
                      onClick={[Function]}
                      secondary={false}
                      size={null}
                      type="submit"
                    >
                      <Ref
                        innerRef={
                          Object {
                            "current": <button
                              class="ui circular right floated button"
                              type="submit"
                            >
                              There is some text
                            </button>,
                          }
                        }
                      >
                        <RefFindNode
                          innerRef={
                            Object {
                              "current": <button
                                class="ui circular right floated button"
                                type="submit"
                              >
                                There is some text
                              </button>,
                            }
                          }
                        >
                          <button
                            className="ui circular right floated button"
                            onClick={[Function]}
                            type="submit"
                          >
                            There is some text
                          </button>
                        </RefFindNode>
                      </Ref>
                    </Button>
                  </Button>
                </form>
              </Form>
            </div>
          </CardContent>
        </div>
      </Card>
    </Form>
  </div>
</CookieAlert>
`;

exports[`The \`CookieAlert\` component if \`isUserOnMobile\` is true should return the right structure 1`] = `
<CookieAlert
  buttonText="There is some text"
  isOpen={true}
  isUserOnMobile={true}
  linkText="A link"
  linkUrl="/"
  onAccept={[MockFunction]}
  text="some text"
>
  <Modal
    hasCloseIcon={false}
    hasPadding={false}
    hasRoundedCorners={true}
    header={null}
    isFullscreen={false}
    isOpen={true}
    onClose={[Function]}
    size="tiny"
    trigger={null}
  >
    <Modal
      centered={true}
      className="has-rounded-corners"
      closeIcon={false}
      closeOnDimmerClick={true}
      closeOnDocumentClick={false}
      dimmer="inverted"
      eventPool="Modal"
      onClose={[Function]}
      open={true}
      size="tiny"
      trigger={null}
    >
      <Portal
        closeOnDocumentClick={false}
        closeOnEscape={true}
        eventPool="Modal"
        mountNode={
          <body
            class="dimmable dimmed"
          >
            <div
              class="ui inverted page modals dimmer transition visible active"
              style="display: flex;"
            >
              <div
                class="ui tiny modal transition visible active has-rounded-corners"
              >
                <div
                  class="content"
                >
                  <div
                    class="ui container"
                  >
                    <div
                      class="flex-container"
                      style="display: flex; flex-grow: 1; height: 100%; align-items: center; flex-direction: column; justify-content: center;"
                    >
                      <div
                        class="ui hidden divider"
                      />
                      <p
                        class=""
                      >
                        some text
                      </p>
                      <a
                        class="ui basic left floated button"
                        href="/"
                        role="button"
                        target="_blank"
                        type="button"
                      >
                        A link
                      </a>
                      <div
                        class="ui hidden divider"
                      />
                      <button
                        class="ui circular left floated button"
                        type="button"
                      >
                        There is some text
                      </button>
                       
                      <div
                        class="ui hidden divider"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ui inverted page modals dimmer transition visible active"
              style="display: flex;"
            >
              <div
                class="ui tiny modal transition visible active has-rounded-corners"
              >
                <div
                  class="content"
                >
                  <div
                    class="ui container"
                  >
                    <div
                      class="flex-container"
                      style="display: flex; flex-grow: 1; height: 100%; align-items: center; flex-direction: column; justify-content: center;"
                    >
                      <div
                        class="ui hidden divider"
                      />
                      <p
                        class=""
                      >
                        some text
                      </p>
                      <a
                        class="ui basic left floated button"
                        href="/"
                        role="button"
                        target="_blank"
                        type="button"
                      >
                        A link
                      </a>
                      <div
                        class="ui hidden divider"
                      />
                      <button
                        class="ui circular left floated button"
                        type="button"
                      >
                        There is some text
                      </button>
                       
                      <div
                        class="ui hidden divider"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </body>
        }
        onClose={[Function]}
        onMount={[Function]}
        onOpen={[Function]}
        onUnmount={[Function]}
        open={true}
        openOnTriggerClick={true}
        trigger={null}
      >
        <PortalInner
          innerRef={
            Object {
              "current": <div
                class="ui inverted page modals dimmer transition visible active"
                style="display: flex;"
              >
                <div
                  class="ui tiny modal transition visible active has-rounded-corners"
                >
                  <div
                    class="content"
                  >
                    <div
                      class="ui container"
                    >
                      <div
                        class="flex-container"
                        style="display: flex; flex-grow: 1; height: 100%; align-items: center; flex-direction: column; justify-content: center;"
                      >
                        <div
                          class="ui hidden divider"
                        />
                        <p
                          class=""
                        >
                          some text
                        </p>
                        <a
                          class="ui basic left floated button"
                          href="/"
                          role="button"
                          target="_blank"
                          type="button"
                        >
                          A link
                        </a>
                        <div
                          class="ui hidden divider"
                        />
                        <button
                          class="ui circular left floated button"
                          type="button"
                        >
                          There is some text
                        </button>
                         
                        <div
                          class="ui hidden divider"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>,
            }
          }
          mountNode={
            <body
              class="dimmable dimmed"
            >
              <div
                class="ui inverted page modals dimmer transition visible active"
                style="display: flex;"
              >
                <div
                  class="ui tiny modal transition visible active has-rounded-corners"
                >
                  <div
                    class="content"
                  >
                    <div
                      class="ui container"
                    >
                      <div
                        class="flex-container"
                        style="display: flex; flex-grow: 1; height: 100%; align-items: center; flex-direction: column; justify-content: center;"
                      >
                        <div
                          class="ui hidden divider"
                        />
                        <p
                          class=""
                        >
                          some text
                        </p>
                        <a
                          class="ui basic left floated button"
                          href="/"
                          role="button"
                          target="_blank"
                          type="button"
                        >
                          A link
                        </a>
                        <div
                          class="ui hidden divider"
                        />
                        <button
                          class="ui circular left floated button"
                          type="button"
                        >
                          There is some text
                        </button>
                         
                        <div
                          class="ui hidden divider"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ui inverted page modals dimmer transition visible active"
                style="display: flex;"
              >
                <div
                  class="ui tiny modal transition visible active has-rounded-corners"
                >
                  <div
                    class="content"
                  >
                    <div
                      class="ui container"
                    >
                      <div
                        class="flex-container"
                        style="display: flex; flex-grow: 1; height: 100%; align-items: center; flex-direction: column; justify-content: center;"
                      >
                        <div
                          class="ui hidden divider"
                        />
                        <p
                          class=""
                        >
                          some text
                        </p>
                        <a
                          class="ui basic left floated button"
                          href="/"
                          role="button"
                          target="_blank"
                          type="button"
                        >
                          A link
                        </a>
                        <div
                          class="ui hidden divider"
                        />
                        <button
                          class="ui circular left floated button"
                          type="button"
                        >
                          There is some text
                        </button>
                         
                        <div
                          class="ui hidden divider"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </body>
          }
          onMount={[Function]}
          onUnmount={[Function]}
        >
          <Portal
            containerInfo={
              <body
                class="dimmable dimmed"
              >
                <div
                  class="ui inverted page modals dimmer transition visible active"
                  style="display: flex;"
                >
                  <div
                    class="ui tiny modal transition visible active has-rounded-corners"
                  >
                    <div
                      class="content"
                    >
                      <div
                        class="ui container"
                      >
                        <div
                          class="flex-container"
                          style="display: flex; flex-grow: 1; height: 100%; align-items: center; flex-direction: column; justify-content: center;"
                        >
                          <div
                            class="ui hidden divider"
                          />
                          <p
                            class=""
                          >
                            some text
                          </p>
                          <a
                            class="ui basic left floated button"
                            href="/"
                            role="button"
                            target="_blank"
                            type="button"
                          >
                            A link
                          </a>
                          <div
                            class="ui hidden divider"
                          />
                          <button
                            class="ui circular left floated button"
                            type="button"
                          >
                            There is some text
                          </button>
                           
                          <div
                            class="ui hidden divider"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ui inverted page modals dimmer transition visible active"
                  style="display: flex;"
                >
                  <div
                    class="ui tiny modal transition visible active has-rounded-corners"
                  >
                    <div
                      class="content"
                    >
                      <div
                        class="ui container"
                      >
                        <div
                          class="flex-container"
                          style="display: flex; flex-grow: 1; height: 100%; align-items: center; flex-direction: column; justify-content: center;"
                        >
                          <div
                            class="ui hidden divider"
                          />
                          <p
                            class=""
                          >
                            some text
                          </p>
                          <a
                            class="ui basic left floated button"
                            href="/"
                            role="button"
                            target="_blank"
                            type="button"
                          >
                            A link
                          </a>
                          <div
                            class="ui hidden divider"
                          />
                          <button
                            class="ui circular left floated button"
                            type="button"
                          >
                            There is some text
                          </button>
                           
                          <div
                            class="ui hidden divider"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </body>
            }
          >
            <Ref
              innerRef={[Function]}
            >
              <RefFindNode
                innerRef={[Function]}
              >
                <div
                  className="ui inverted page modals dimmer transition visible active"
                >
                  <Ref
                    innerRef={
                      Object {
                        "current": <div
                          class="ui tiny modal transition visible active has-rounded-corners"
                        >
                          <div
                            class="content"
                          >
                            <div
                              class="ui container"
                            >
                              <div
                                class="flex-container"
                                style="display: flex; flex-grow: 1; height: 100%; align-items: center; flex-direction: column; justify-content: center;"
                              >
                                <div
                                  class="ui hidden divider"
                                />
                                <p
                                  class=""
                                >
                                  some text
                                </p>
                                <a
                                  class="ui basic left floated button"
                                  href="/"
                                  role="button"
                                  target="_blank"
                                  type="button"
                                >
                                  A link
                                </a>
                                <div
                                  class="ui hidden divider"
                                />
                                <button
                                  class="ui circular left floated button"
                                  type="button"
                                >
                                  There is some text
                                </button>
                                 
                                <div
                                  class="ui hidden divider"
                                />
                              </div>
                            </div>
                          </div>
                        </div>,
                      }
                    }
                  >
                    <RefFindNode
                      innerRef={
                        Object {
                          "current": <div
                            class="ui tiny modal transition visible active has-rounded-corners"
                          >
                            <div
                              class="content"
                            >
                              <div
                                class="ui container"
                              >
                                <div
                                  class="flex-container"
                                  style="display: flex; flex-grow: 1; height: 100%; align-items: center; flex-direction: column; justify-content: center;"
                                >
                                  <div
                                    class="ui hidden divider"
                                  />
                                  <p
                                    class=""
                                  >
                                    some text
                                  </p>
                                  <a
                                    class="ui basic left floated button"
                                    href="/"
                                    role="button"
                                    target="_blank"
                                    type="button"
                                  >
                                    A link
                                  </a>
                                  <div
                                    class="ui hidden divider"
                                  />
                                  <button
                                    class="ui circular left floated button"
                                    type="button"
                                  >
                                    There is some text
                                  </button>
                                   
                                  <div
                                    class="ui hidden divider"
                                  />
                                </div>
                              </div>
                            </div>
                          </div>,
                        }
                      }
                    >
                      <div
                        className="ui tiny modal transition visible active has-rounded-corners"
                        style={Object {}}
                      >
                        <MountNode
                          className="dimmable dimmed"
                        />
                        <ModalContent>
                          <div
                            className="content"
                          >
                            <HorizontalGutters>
                              <Container>
                                <div
                                  className="ui container"
                                >
                                  <FlexContainer
                                    alignContent={null}
                                    alignItems="center"
                                    flexDirection="column"
                                    flexWrap={null}
                                    justifyContent="center"
                                  >
                                    <div
                                      className="flex-container"
                                      style={
                                        Object {
                                          "alignContent": null,
                                          "alignItems": "center",
                                          "display": "flex",
                                          "flexDirection": "column",
                                          "flexGrow": "1",
                                          "flexWrap": null,
                                          "height": "100%",
                                          "justifyContent": "center",
                                        }
                                      }
                                    >
                                      <Divider
                                        className=""
                                        hasLine={false}
                                        size="medium"
                                      >
                                        <Divider
                                          className=""
                                          hidden={true}
                                          section={false}
                                        >
                                          <div
                                            className="ui hidden divider"
                                          />
                                        </Divider>
                                      </Divider>
                                      <Paragraph
                                        isCompact={false}
                                        size="medium"
                                        weight={null}
                                      >
                                        <p
                                          className=""
                                        >
                                          some text
                                        </p>
                                      </Paragraph>
                                      <Link
                                        href="/"
                                        isFluid={false}
                                        isPositionedRight={false}
                                        onClick={[Function]}
                                        willOpenInNewTab={true}
                                      >
                                        <Button
                                          as="a"
                                          basic={true}
                                          floated="left"
                                          fluid={false}
                                          href="/"
                                          onClick={[Function]}
                                          target="_blank"
                                          type="button"
                                        >
                                          <Ref
                                            innerRef={
                                              Object {
                                                "current": <a
                                                  class="ui basic left floated button"
                                                  href="/"
                                                  role="button"
                                                  target="_blank"
                                                  type="button"
                                                >
                                                  A link
                                                </a>,
                                              }
                                            }
                                          >
                                            <RefFindNode
                                              innerRef={
                                                Object {
                                                  "current": <a
                                                    class="ui basic left floated button"
                                                    href="/"
                                                    role="button"
                                                    target="_blank"
                                                    type="button"
                                                  >
                                                    A link
                                                  </a>,
                                                }
                                              }
                                            >
                                              <a
                                                className="ui basic left floated button"
                                                href="/"
                                                onClick={[Function]}
                                                role="button"
                                                target="_blank"
                                                type="button"
                                              >
                                                A link
                                              </a>
                                            </RefFindNode>
                                          </Ref>
                                        </Button>
                                      </Link>
                                      <Divider
                                        className=""
                                        hasLine={false}
                                        size="medium"
                                      >
                                        <Divider
                                          className=""
                                          hidden={true}
                                          section={false}
                                        >
                                          <div
                                            className="ui hidden divider"
                                          />
                                        </Divider>
                                      </Divider>
                                      <Button
                                        hasShadow={false}
                                        icon={null}
                                        isCompact={false}
                                        isDisabled={false}
                                        isFluid={false}
                                        isFormSubmit={false}
                                        isLoading={false}
                                        isOutlined={false}
                                        isPositionedRight={false}
                                        isRounded={true}
                                        isSecondary={false}
                                        onClick={[MockFunction]}
                                        size={null}
                                      >
                                        <Button
                                          as="button"
                                          basic={false}
                                          circular={true}
                                          className=""
                                          compact={false}
                                          disabled={false}
                                          floated="left"
                                          fluid={false}
                                          loading={false}
                                          onClick={[MockFunction]}
                                          secondary={false}
                                          size={null}
                                          type="button"
                                        >
                                          <Ref
                                            innerRef={
                                              Object {
                                                "current": <button
                                                  class="ui circular left floated button"
                                                  type="button"
                                                >
                                                  There is some text
                                                </button>,
                                              }
                                            }
                                          >
                                            <RefFindNode
                                              innerRef={
                                                Object {
                                                  "current": <button
                                                    class="ui circular left floated button"
                                                    type="button"
                                                  >
                                                    There is some text
                                                  </button>,
                                                }
                                              }
                                            >
                                              <button
                                                className="ui circular left floated button"
                                                onClick={[Function]}
                                                type="button"
                                              >
                                                There is some text
                                              </button>
                                            </RefFindNode>
                                          </Ref>
                                        </Button>
                                      </Button>
                                       
                                      <Divider
                                        className=""
                                        hasLine={false}
                                        size="medium"
                                      >
                                        <Divider
                                          className=""
                                          hidden={true}
                                          section={false}
                                        >
                                          <div
                                            className="ui hidden divider"
                                          />
                                        </Divider>
                                      </Divider>
                                    </div>
                                  </FlexContainer>
                                </div>
                              </Container>
                            </HorizontalGutters>
                          </div>
                        </ModalContent>
                      </div>
                    </RefFindNode>
                  </Ref>
                </div>
              </RefFindNode>
            </Ref>
          </Portal>
        </PortalInner>
        <EventStack
          name="mouseleave"
          on={[Function]}
          pool="Modal"
          target={
            Object {
              "current": <div
                class="ui inverted page modals dimmer transition visible active"
                style="display: flex;"
              >
                <div
                  class="ui tiny modal transition visible active has-rounded-corners"
                >
                  <div
                    class="content"
                  >
                    <div
                      class="ui container"
                    >
                      <div
                        class="flex-container"
                        style="display: flex; flex-grow: 1; height: 100%; align-items: center; flex-direction: column; justify-content: center;"
                      >
                        <div
                          class="ui hidden divider"
                        />
                        <p
                          class=""
                        >
                          some text
                        </p>
                        <a
                          class="ui basic left floated button"
                          href="/"
                          role="button"
                          target="_blank"
                          type="button"
                        >
                          A link
                        </a>
                        <div
                          class="ui hidden divider"
                        />
                        <button
                          class="ui circular left floated button"
                          type="button"
                        >
                          There is some text
                        </button>
                         
                        <div
                          class="ui hidden divider"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>,
            }
          }
        />
        <EventStack
          name="mouseenter"
          on={[Function]}
          pool="Modal"
          target={
            Object {
              "current": <div
                class="ui inverted page modals dimmer transition visible active"
                style="display: flex;"
              >
                <div
                  class="ui tiny modal transition visible active has-rounded-corners"
                >
                  <div
                    class="content"
                  >
                    <div
                      class="ui container"
                    >
                      <div
                        class="flex-container"
                        style="display: flex; flex-grow: 1; height: 100%; align-items: center; flex-direction: column; justify-content: center;"
                      >
                        <div
                          class="ui hidden divider"
                        />
                        <p
                          class=""
                        >
                          some text
                        </p>
                        <a
                          class="ui basic left floated button"
                          href="/"
                          role="button"
                          target="_blank"
                          type="button"
                        >
                          A link
                        </a>
                        <div
                          class="ui hidden divider"
                        />
                        <button
                          class="ui circular left floated button"
                          type="button"
                        >
                          There is some text
                        </button>
                         
                        <div
                          class="ui hidden divider"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>,
            }
          }
        />
        <EventStack
          name="mousedown"
          on={[Function]}
          pool="Modal"
          target="document"
        />
        <EventStack
          name="click"
          on={[Function]}
          pool="Modal"
          target="document"
        />
        <EventStack
          name="keydown"
          on={[Function]}
          pool="Modal"
          target="document"
        />
      </Portal>
    </Modal>
  </Modal>
</CookieAlert>
`;
